# go-rs

./: Cargo.toml  README.md
completions/: _go
docs/: index.html  reference.html  report.html
examples/: closures.go  fib.go  fizzbuzz.go  goroutines.go  interfaces.go  loop.go  select.go  structs.go
man/man1/: go.1  goall.1
parity-scripts/: arith.go  bitwise_const.go  channels_pipeline.go  closures.go  closures_capture.go  control.go  defer_panic.go  generics.go  goroutine_closure.go  goroutines_workers.go  interfaces_poly.go  lang_features.go  math_sort.go  printf.go  recursion.go  run.sh  runtime_recover.go  select_fanin.go  slices_maps.go  strings_stdlib.go  structs_methods.go  type_switch.go
src/: aot_native.rs  ast.rs  banner.rs  cli.rs  compiler.rs  dap.rs  host.rs  lexer.rs  lib.rs  lsp.rs  main.rs  parser.rs  pkg.rs  rust_ffi.rs  stdlib_vendor.rs
tests/: eval.rs
